[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/GameUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Root.gd" type="Script" id=2]
[ext_resource path="res://entities/ProgramTimer.gd" type="Script" id=3]
[ext_resource path="res://scenes/ProgrammerUI.tscn" type="PackedScene" id=4]

[node name="Root" type="Node2D"]
script = ExtResource( 2 )

[node name="GameUI" parent="." instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( 736, 144 )

[node name="ProgramTimer" type="Timer" parent="."]
script = ExtResource( 3 )

[node name="LevelContainer" type="Control" parent="."]
margin_left = 32.0
margin_top = 28.0
margin_right = 704.0
margin_bottom = 572.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgrammerUI" parent="." instance=ExtResource( 4 )]
margin_left = 736.0
margin_top = 142.0
margin_right = 992.0
margin_bottom = 494.0
[connection signal="fastforward" from="GameUI" to="." method="_on_GameUI_fastforward"]
[connection signal="next_level" from="GameUI" to="." method="_on_GameUI_next_level"]
[connection signal="normalspeed" from="GameUI" to="." method="_on_GameUI_normalspeed"]
[connection signal="paused" from="GameUI" to="." method="_on_GameUI_paused"]
[connection signal="playing" from="GameUI" to="." method="_on_GameUI_playing"]
[connection signal="restart" from="GameUI" to="." method="_on_GameUI_restart"]
[connection signal="timeout" from="ProgramTimer" to="." method="_on_ProgramTimer_timeout"]
